Fix [#37393] Input dimensions are case sensitive in the property panel, uppercase input is misinterpreted

Typo in lowercasing code!